[package]
name = "tcpkill"
description = "Kill TCP connections"
authors = ["Anisse Astier <anisse@astier.eu>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uapi = "0.2.0"
netlink-sys = "0.8.3"

[dependencies.clap]
version = "3.1.18"
default-features = false
features = ["suggestions", "std", "derive"]

[dependencies.netlink-packet-sock-diag]
git = "https://github.com/anisse/netlink"
branch = "sock-destroy"
